<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".ui.activity.setting.VersionActivity">

    <RelativeLayout
        android:id="@+id/topNavLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_nav_bar_heigth">

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="50dp"
            android:layout_height="44dp"
            android:layout_centerVertical="true"
            android:background="@null"
            android:onClick="clickBackBtn"
            android:src="@drawable/ic_prev" />

        <TextView
            android:id="@+id/titleView"
            style="@style/TextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/backBtn"
            android:text="@string/version_title" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_below="@+id/topNavLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp">

        <ImageView
            android:id="@+id/logoView"
            android:layout_width="136dp"
            android:layout_height="136dp"
            android:background="@drawable/img_logo"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/tv_version_message"
            android:layout_below="@+id/logoView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorTitle"
            android:textSize="14dp"
            android:textStyle="bold"
            android:text="@string/version_message"/>

        <TextView
            android:id="@+id/tv_version_now_new"
            android:layout_below="@+id/tv_version_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorBtnTxtDisable"
            android:textSize="13dp"
            android:textStyle="bold"
            android:text="@string/version_now_new"/>

    </RelativeLayout>

    <Button
        android:id="@+id/btn_stack"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginStart="@dimen/common_margin"
        android:layout_marginEnd="@dimen/common_margin"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/selector_common_btn"
        android:textColor="@color/colorBtnTxtDisable"
        android:textSize="15dp"
        android:text="@string/update"
        android:enabled="false"
        android:onClick="onBtnClick"/>

</RelativeLayout>