<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".ui.activity.setting.AlarmSettingActivity">

    <RelativeLayout
        android:id="@+id/topNavLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_nav_bar_heigth">

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="50dp"
            android:layout_height="44dp"
            android:layout_centerVertical="true"
            android:background="@null"
            android:onClick="clickBackBtn"
            android:src="@drawable/ic_prev" />

        <TextView
            android:id="@+id/titleView"
            style="@style/TextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/backBtn"
            android:text="@string/alarm_title" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/topNavLayout"
        android:paddingLeft="@dimen/common_margin"
        android:paddingRight="@dimen/common_margin">

        <RelativeLayout
            android:id="@+id/totalSettingLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="3dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textSize="15dp"
                android:textStyle="bold"
                android:textColor="@color/colorTitle"
                android:text="@string/alarm_all_push"/>

            <CheckBox
                android:id="@+id/ckb_push_all"
                android:layout_width="47dp"
                android:layout_height="26dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:button="@drawable/bg_check_toggle"
                android:background="@null"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/noticeAlarmSettingLayout"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:paddingStart="10dp"
            android:layout_below="@+id/totalSettingLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                style="@style/TextBody"
                android:text="@string/alarm_major_notice"/>

            <CheckBox
                android:id="@+id/ckb_notice"
                android:layout_width="47dp"
                android:layout_height="26dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:button="@drawable/bg_check_toggle"
                android:background="@null"/>

        </RelativeLayout>

        <ImageView
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/noticeAlarmSettingLayout"
            android:background="@color/colorLine"/>

        <RelativeLayout
            android:id="@+id/challengeAlarmSettingLayout"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:paddingStart="10dp"
            android:layout_below="@+id/line2"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                style="@style/TextBody"
                android:text="@string/alarm_invice_challenge"/>

            <CheckBox
                android:id="@+id/ckb_challenge"
                android:layout_width="47dp"
                android:layout_height="26dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:button="@drawable/bg_check_toggle"
                android:background="@null"/>

        </RelativeLayout>

        <ImageView
            android:id="@+id/line3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/challengeAlarmSettingLayout"
            android:background="@color/colorLine"
            android:visibility="gone"/>

        <RelativeLayout
            android:id="@+id/answerAlarmLayout"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:paddingStart="10dp"
            android:layout_below="@+id/line3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                style="@style/TextBody"
                android:text="@string/alarm_qna"/>

            <CheckBox
                android:id="@+id/ckb_qna"
                android:layout_width="47dp"
                android:layout_height="26dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:button="@drawable/bg_check_toggle"
                android:background="@null"/>

        </RelativeLayout>

        <ImageView
            android:id="@+id/line4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/answerAlarmLayout"
            android:background="@color/colorLine"/>

        <RelativeLayout
            android:id="@+id/eventAlarmLayout"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:paddingStart="10dp"
            android:layout_below="@+id/line4">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                style="@style/TextBody"
                android:text="@string/alarm_event"/>

            <CheckBox
                android:id="@+id/ckb_event"
                android:layout_width="47dp"
                android:layout_height="26dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:button="@drawable/bg_check_toggle"
                android:background="@null"/>

        </RelativeLayout>

        <ImageView
            android:id="@+id/line5"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/eventAlarmLayout"
            android:background="@color/colorLine"/>

        <RelativeLayout
            android:id="@+id/quizAlarmLayout"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:paddingStart="10dp"
            android:layout_below="@+id/line5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                style="@style/TextBody"
                android:text="@string/alarm_quick_poll"/>

            <CheckBox
                android:id="@+id/ckb_quick_poll"
                android:layout_width="47dp"
                android:layout_height="26dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:button="@drawable/bg_check_toggle"
                android:background="@null"/>

        </RelativeLayout>

        <ImageView
            android:id="@+id/line6"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/quizAlarmLayout"
            android:background="@color/colorLine"/>
    </RelativeLayout>
</RelativeLayout>